Add sidebar icons

--- a/index.html
+++ b/index.html
@@ -6,28 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Admin Dashboard</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="sidebar">
         <p>Dashboard</p>
-        <div class="sidebar-items-top">
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-            </ul>
-        </div>
-        <div class="sidebar-items-bottom">
-            <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
-            </ul>
-        </div>
-
+        <ul class="sidebar-items-top">
+            <li>
+                <img src="./images/home-circle.svg">
+                <p>Home</p>
+            </li>
+            <li>
+                <img src="./images/account-circle.svg">
+                <p>Profile</p>
+            </li>
+            <li>
+                <img src="./images/chat-processing.svg">
+                <p>Messages</p>
+            </li>
+            <li>
+                <img src="./images/history.svg">
+                <p>History</p>
+            </li>
+            <li>
+                <img src="./images/file-search.svg">
+                <p>Tasks</p>                
+            </li>
+            <li>
+                <img src="./images/account-group.svg">
+                <p>Communities</p>                
+            </li>
+        </ul>
+        <ul class="sidebar-items-bottom">
+            <li>
+                <img src="./images/cogs.svg">
+                <p>Settings</p>
+            </li>
+            <li>
+                <img src="./images/help-circle.svg">
+                <p>Support</p>
+            </li>
+            <li>
+                <img src="./images/shield-check.svg">
+                <p>Privacy</p>
+            </li>
+        </ul>
     </nav>
     <div class="main-section">
         <header>
