--- a/index.html
+++ b/index.html
@@ -15,50 +15,88 @@
         <p>Dashboard</p>
         <ul class="sidebar-items-top">
             <li>
-                <img src="./images/home-circle.svg">
+                <img class="icon" src="./images/home-circle.svg">
                 <p>Home</p>
             </li>
             <li>
-                <img src="./images/account-circle.svg">
+                <img class="icon" src="./images/account-circle.svg">
                 <p>Profile</p>
             </li>
             <li>
-                <img src="./images/chat-processing.svg">
+                <img class="icon" src="./images/chat-processing.svg">
                 <p>Messages</p>
             </li>
             <li>
-                <img src="./images/history.svg">
+                <img class="icon" src="./images/history.svg">
                 <p>History</p>
             </li>
             <li>
-                <img src="./images/file-search.svg">
+                <img class="icon" src="./images/file-search.svg">
                 <p>Tasks</p>                
             </li>
             <li>
-                <img src="./images/account-group.svg">
+                <img class="icon" src="./images/account-group.svg">
                 <p>Communities</p>                
             </li>
         </ul>
         <ul class="sidebar-items-bottom">
             <li>
-                <img src="./images/cogs.svg">
+                <img class="icon" src="./images/cogs.svg">
                 <p>Settings</p>
             </li>
             <li>
-                <img src="./images/help-circle.svg">
+                <img class="icon" src="./images/help-circle.svg">
                 <p>Support</p>
             </li>
             <li>
-                <img src="./images/shield-check.svg">
+                <img class="icon" src="./images/shield-check.svg">
                 <p>Privacy</p>
             </li>
         </ul>
     </nav>
     <div class="main-section">
         <header>
-            
+            <div class="header-left">
+                <ul>
+                    <li>
+                        <img class="icon" src="./images/magnify.svg">
+                        <form>
+                            <input type="search" id="search-bar" name="search-bar">
+                        </form>
+                    </li>
+                </ul>
+                <div class="profile-greeting">
+                    <img>
+                    <p>Hi there,</p>
+                    <p>Alexandre Machado (@alemachado7)</p>
+                </div>
+            </div>
+            <div class="header-right">
+                <div class="profile-info">
+                    <img class="icon" src="./images/bell-ring.svg">
+                    <img class="mini-profile-picture" src="">
+                    <p>Alexandre Machado</p>
+                </div>
+                <div class="header-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </header>
         <main>
+            <div class="projects">            
+                <p>Your Projects</p>
+            </div>
+            <div class="other-info">
+                <div class="announcements">
+
+                </div>
+                <div class="trending">
+
+                </div>
+
+            </div>
 
         </main>
     </div>
