Add styling to announcements tab and trending tab with some content

--- a/index.html
+++ b/index.html
@@ -86,18 +86,85 @@
         </header>
         <main>
             <div class="projects">            
-                <p>Your Projects</p>
+                <h3>Your Projects</h3>
+                <div class="projects-cards">
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-icons">
+
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Cool Project</h4>
+                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                    </div>
+                </div>
             </div>
             <div class="other-info">
                 <div class="announcements">
-
+                    <h3>Announcements</h3>
+                    <div class="announcement-wrapper">
+                        <div class="announcement-card">
+                            <h6>Site Maintenance</h6>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendreit solades congue...</p>
+                        </div>
+                        <div class="announcement-card">
+                            <h6>Site Maintenance</h6>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendreit solades congue...</p>
+                        </div>
+                        <div class="announcement-card">
+                            <h6>Site Maintenance</h6>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendreit solades congue...</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="trending">
-
+                    <h3>Trending</h3>
+                    <ul class="trending-list">
+                        <li>
+                            <div class="item-info">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item-info">
+                                <p>@morgan</p>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item-info">
+                                <p>@kendall</p>
+                                <p>Life Changing App</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item-info">
+                                <p>@alex</p>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-
             </div>
-
         </main>
     </div>
 </body>
