Add icons and more styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="main-section">
         <header>
             <div class="header-left">
-                <ul>
+                <ul class="search-bar">
                     <li>
                         <img class="icon" src="./images/magnify.svg">
                         <form>
@@ -65,16 +65,20 @@
                         </form>
                     </li>
                 </ul>
-                <div class="profile-greeting">
-                    <img>
-                    <p>Hi there,</p>
-                    <p>Alexandre Machado (@alemachado7)</p>
-                </div>
+                <ul class="profile-greeting">
+                    <li class="profile-info-left">
+                        <img class="profile-picture" src="./images/cat.png">
+                        <div class="greeting-text">
+                            <p>Hi there,</p>
+                            <p>Alexandre Machado (@alemachado7)</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="header-right">
-                <div class="profile-info">
+                <div class="profile-info-right">
                     <img class="icon" src="./images/bell-ring.svg">
-                    <img class="mini-profile-picture" src="">
+                    <img class="mini-profile-picture" src="./images/cat.png">
                     <p>Alexandre Machado</p>
                 </div>
                 <div class="header-buttons">
@@ -89,31 +93,70 @@
                 <h3>Your Projects</h3>
                 <div class="projects-cards">
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
                         <div class="card-icons">
-
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
                         </div>
                     </div>
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="card-icon" src="./images/star-plus-outline.svg">
+                            <img class="card-icon" src="./images/eye-plus-outline.svg">
+                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,24 +182,28 @@
                     <h3>Trending</h3>
                     <ul class="trending-list">
                         <li>
+                            <img class="item-img" src="./images/man (1).png">
                             <div class="item-info">
                                 <p>@tegan</p>
                                 <p>World Peace Builder</p>
                             </div>
                         </li>
                         <li>
+                            <img class="item-img" src="./images/man.png">
                             <div class="item-info">
                                 <p>@morgan</p>
                                 <p>Super Cool Project</p>
                             </div>
                         </li>
                         <li>
-                            <div class="item-info">
+                            <img class="item-img" src="./images/woman (1).png">
+                            <div class="item-info">                                
                                 <p>@kendall</p>
                                 <p>Life Changing App</p>
                             </div>
                         </li>
                         <li>
+                            <img class="item-img" src="./images/woman (2).png">
                             <div class="item-info">
                                 <p>@alex</p>
                                 <p>No Traffic Maker</p>
