Add more styling and change some html properties

--- a/index.html
+++ b/index.html
@@ -15,42 +15,60 @@
         <p>Dashboard</p>
         <ul class="sidebar-items-top">
             <li>
-                <img class="icon" src="./images/home-circle.svg">
-                <p>Home</p>
+                <a href="#">
+                    <img class="icon" src="./images/home-circle.svg">
+                    Home
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/account-circle.svg">
-                <p>Profile</p>
+                <a href="#">
+                    <img class="icon" src="./images/account-circle.svg">
+                    Profile
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/chat-processing.svg">
-                <p>Messages</p>
+                <a href="#">
+                    <img class="icon" src="./images/chat-processing.svg">
+                    Messages
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/history.svg">
-                <p>History</p>
+                <a href="#">
+                    <img class="icon" src="./images/history.svg">
+                    History
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/file-search.svg">
-                <p>Tasks</p>                
+                <a href="#">
+                    <img class="icon" src="./images/file-search.svg">
+                    Tasks
+                </a>                
             </li>
             <li>
-                <img class="icon" src="./images/account-group.svg">
-                <p>Communities</p>                
+                <a href="#">
+                    <img class="icon" src="./images/account-group.svg">
+                    Communities
+                </a>                
             </li>
         </ul>
         <ul class="sidebar-items-bottom">
             <li>
-                <img class="icon" src="./images/cogs.svg">
-                <p>Settings</p>
+                <a href="#">
+                    <img class="icon" src="./images/cogs.svg">
+                    Settings
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/help-circle.svg">
-                <p>Support</p>
+                <a href="#">
+                    <img class="icon" src="./images/help-circle.svg">
+                    Support
+                </a>
             </li>
             <li>
-                <img class="icon" src="./images/shield-check.svg">
-                <p>Privacy</p>
+                <a href="#">
+                    <img class="icon" src="./images/shield-check.svg">
+                    Privacy
+                </a>
             </li>
         </ul>
     </nav>
