--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -127,9 +127,9 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -138,9 +138,9 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -149,9 +149,9 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -160,9 +160,9 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -171,11 +171,45 @@
                             <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
                         </div>
                         <div class="card-icons">
-                            <img class="card-icon" src="./images/star-plus-outline.svg">
-                            <img class="card-icon" src="./images/eye-plus-outline.svg">
-                            <img class="card-icon" src="./images/share-variant-outline.svg">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lactus ut sclecerisque. Suspendisse sollicitudin nibh erat, id facillisis felis accumsan nec.</p>
+                        </div>
+                        <div class="card-icons">
+                            <a href="#"><img class="card-icon" src="./images/star-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/eye-plus-outline.svg"></a>
+                            <a href="#"><img class="card-icon" src="./images/share-variant-outline.svg"></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="other-info">
